less: Fix catalog thread link spacing

--- a/less/base.less
+++ b/less/base.less
@@ -119,7 +119,7 @@ table {
 	}
 }
 
-#noscriptHeader {
+#noscript-header {
 	color: #b5bd68;
 	margin-top: 1em;
 	font-size: 10vw;
