--- a/less/posts.mix.less
+++ b/less/posts.mix.less
@@ -105,7 +105,7 @@ figcaption {
 	}
 }
 
-figcaption, header {
+.spaced {
 	& > *:before {
 		content: ' ';
 	}
